--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 </div>
 
                 <div class="carousel-item">
-                    <img class="d-block w-100" src="images/coronavirus.jpg" alt="Second slide">
+                    <img class="d-block w-100" src="images/Coronavirus.jpg" alt="Second slide">
                 </div>
 
 
